--- a/roles/dkr/files/cv.html
+++ b/roles/dkr/files/cv.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
   <head>
     <title>   Lubomir Bogda - CV   </title>
-  </head>
+  </head>  
 
 <pre><span style="font-family:Anonymous Pro,Ubuntu Mono,Andale Mono,Monaco,Lucida Console,Inconsolata,Consolas,Monospace,Courier New; font-size:14px">
   -------------
@@ -10,7 +10,7 @@
   Kosice, 04011
   -------------
 
-  &gt;&gt;  recvmsgs@gmail.com
+  &gt;&gt;  recvmsgs@gmail.com                                                     <a href="https://github.com/recvmsgs">https://github.com/recvmsgs</a>  &lt;&lt;
 
             0949-646-314
 
@@ -48,7 +48,7 @@
 
                  -- For reference, please contact Michal Mikulaško at:
                     info@numerika.sk or <a href="https://sk.linkedin.com/in/michal-mikulasko-914921182">https://sk.linkedin.com/in/michal-mikulasko-914921182</a>
-
+ 
  ----------------------------------------------------------------------------------------------------------
 
       ``````````````````
@@ -104,7 +104,7 @@
   BIND, Docker,
   Gitlab:        -- Deployed a backup DNS server using Git, Gitlab and Dockerfiles. This was just
                     'git clone/add/commit' after editing just zone file's IP addessr; then add 'docker run'
-                    to SystemD unit file.
+                    to SystemD unit file. 
 
   &gt;
   LAMP stack:    -- Simple shared hosting with Linux, Apache, MySQL, PHP; DNS, FTP and e-mail servers.
@@ -119,7 +119,7 @@
       ````````````````
       ` 2018
       ` Treecom s.r.o.
-      ` (on contract)
+      ` (on contract) 
       `
       ````````````````
 
@@ -158,7 +158,7 @@
                  -- For reference, please contact Jan Barger at:
                     <a href="https://www.napri.sk/">https://www.napri.sk/</a>
 
-
+ 
 
   ----------------------------------------------------------------------------------------------------------
 
@@ -177,7 +177,7 @@
                     host OS and its containers. I did not work with Saltstack or the infrastructure
                     (storage and networking). I didn't participate in Dev part.
                     My experience with their CD/CD tools was limited.
-
+	
 
                  -- For reference, please contact Juraj Kniz i.e. on
                     <a href="https://sk.linkedin.com/in/juraj-kniz-1865318">https://sk.linkedin.com/in/juraj-kniz-1865318</a>
@@ -192,16 +192,16 @@
       ````````````````
 
   &gt;
-  (sample tasks):
-
-
+  (sample tasks):  
+                    
+                    
                  -- Linux RAID (dmraid) monitoring setup; softraid and LSI raid status monitoring:
                     Cacti, Nagios NRPE installation; softraid storage; design optimalization:
                     Decided to send state information from mdadm directly to syslog server avoiding overhead
                     and unnecessary latency by implementing status polling, daemon mode and syslog().
 
-                 -- Darknet to Internet Mail gateway: Helped with deployment, scripting, testing and
-                    troubleshooting on a simple NATted cluster (no HA or load balancing) on VMware vSphere.
+                 -- Darknet to Internet Mail gateway: Helped with deployment, scripting, testing and 
+                    troubleshooting on a simple NATted cluster (no HA or load balancing) on VMware vSphere.   
 
 
   ----------------------------------------------------------------------------------------------------------
@@ -230,14 +230,14 @@
                     I study concepts of the subject of my work before even starting to commit.
                     I will gladly study documentation like UNIX manpages - sections {2,5,4,8,7}, Open Group
                     POSIX, IETF RFCs. I have gathered some deeper knowledge of APT, dpkg, debconf.
-                    I understand Filesystem Hierarchy Standard, therefore I know where in the filesystem
+                    I understand Filesystem Hierarchy Standard, therefore I know where in the filesystem 
                     specific components, systems, subsystems or packages belong.
                     (For example, I understand reasoning behind /usr merge that Freedesktop did).
 
                     I underestand Debian project tools: debianutils, dschroot, debootstrap, devscripts, etc.
                     I prefer to study source code related to software I work with, even in my spare time.
 
-
+ 
 
   (know-how):    -- I have developed a special workflow, quickly filtering output, generating reports out of
                     more or less structured information coming from my local system and the Internet and
@@ -309,14 +309,14 @@
 
   &gt;
   IPS, IDS, FW:
-    fail2ban
+    fail2ban     
     netfilter    -- No practice with rule matching, target extensions, masquerade target.
                     Using rule numbers with iptables is the top of my skills for now.
 
 
                  -- For reference, please contact Ladislav Kucko at:
                     <a href="https://www.esolutions.sk/en/contact/">https://www.esolutions.sk/en/contact/</a>
-
+ 
 
   ----------------------------------------------------------------------------------------------------------
 
@@ -361,7 +361,7 @@
       ` 2010, &lt;3 months:
       ` T-Systems SK, Kosice
       `
-      ``````````````````````
+      ``````````````````````  
 
   &gt;
   HP UNIX:
@@ -378,22 +378,25 @@
                     block device could be solved by changing journal parameters on the mount.
                     My advice was to remount with noatime,data=writeback and the overhead was gone.
 
-
   &gt;
   HP UNIX
   (forgotten studies):
                  -- HA clustering, HP-UX LVM, LPARs, VxFS.
 
 
+ ----------------------------------------------------------------------------------------------------------
+
+      `````````````````````````````
+      ` until 2008:
+      ` Gymnázium Tomáša Akvinského
+      `
+      `````````````````````````````
+
+                 -- I actually learned all my skills, including languages and Linux by myself.
+                    Anyway, I don't regret going to school, we were a great community.
 
 
 
 
-
-
-
-
-
-
-
+ 
 </span></pre>
